changes to expense controller